feat: integrate golangci-lint
